--- a/docker/docker-compose.with-telegraf.yml
+++ b/docker/docker-compose.with-telegraf.yml
@@ -33,27 +33,25 @@ services:
       - datastreaming-network
     restart: unless-stopped
 
-  # Telegraf - Optional: Uncomment to use Telegraf instead of Python collector
-  # See TELEGRAF.md for benefits and setup instructions
-  # telegraf:
-  #   image: telegraf:1.28
-  #   container_name: telegraf
-  #   volumes:
-  #     - ../telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro
-  #     - /var/run/docker.sock:/var/run/docker.sock:ro
-  #   environment:
-  #     - INFLUXDB_URL=http://influxdb:8086
-  #     - INFLUXDB_TOKEN=my-super-secret-auth-token
-  #     - INFLUXDB_ORG=my-org
-  #     - INFLUXDB_BUCKET=vehicle-data
-  #     - MQTT_BROKER_HOST=mosquitto
-  #     - MQTT_BROKER_PORT=1883
-  #   depends_on:
-  #     - influxdb
-  #     - mosquitto
-  #   networks:
-  #     - datastreaming-network
-  #   restart: unless-stopped
+  telegraf:
+    image: telegraf:1.28
+    container_name: telegraf
+    volumes:
+      - ../telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    environment:
+      - INFLUXDB_URL=http://influxdb:8086
+      - INFLUXDB_TOKEN=my-super-secret-auth-token
+      - INFLUXDB_ORG=my-org
+      - INFLUXDB_BUCKET=vehicle-data
+      - MQTT_BROKER_HOST=mosquitto
+      - MQTT_BROKER_PORT=1883
+    depends_on:
+      - influxdb
+      - mosquitto
+    networks:
+      - datastreaming-network
+    restart: unless-stopped
 
 volumes:
   influxdb-data:
