--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -38,9 +38,6 @@
   # Connection timeout
   connection_timeout = "30s"
   
-  # Keep alive interval
-  keep_alive = 60
-  
   # Persistent session
   persistent_session = true
   
@@ -91,7 +88,7 @@
   container_state_exclude = []
   container_state_include = []
   timeout = "5s"
-  perdevice = true
+  perdevice_include = ["cpu", "blkio", "network"]
   total = false
   docker_label_exclude = []
   docker_label_include = []
@@ -106,10 +103,6 @@
   # Write options
   timeout = "5s"
   content_encoding = "gzip"
-  
-  # Retry configuration
-  retry_count = 3
-  retry_delay = "1s"
 
 # Optional: Log output for debugging
 # [[outputs.file]]
