--- a/docker/docker-compose.with-telegraf.yml
+++ b/docker/docker-compose.with-telegraf.yml
@@ -36,6 +36,7 @@ services:
   telegraf:
     image: telegraf:1.28
     container_name: telegraf
+    user: root  # Required for Docker socket access
     volumes:
       - ../telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
