--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -38,6 +38,7 @@ services:
   # telegraf:
   #   image: telegraf:1.28
   #   container_name: telegraf
+  #   user: root  # Required for Docker socket access (or disable Docker input in config)
   #   volumes:
   #     - ../telegraf/telegraf.conf:/etc/telegraf/telegraf.conf:ro
   #     - /var/run/docker.sock:/var/run/docker.sock:ro
