added tls & other changes

--- a/env.example
+++ b/env.example
@@ -2,6 +2,19 @@
 MQTT_BROKER_HOST=localhost
 MQTT_BROKER_PORT=1883
 
+# MQTT Security Configuration (optional)
+# Set MQTT_USE_TLS=true to enable TLS encryption
+MQTT_USE_TLS=false
+MQTT_TLS_INSECURE=false  # Set to true for self-signed certificates (development only)
+MQTT_CA_CERTS=  # Path to CA certificate file (e.g., docker/mosquitto/config/certs/ca.crt)
+MQTT_CERTFILE=  # Path to client certificate file (optional, for mutual TLS)
+MQTT_KEYFILE=  # Path to client private key file (optional, for mutual TLS)
+
+# MQTT Authentication (optional)
+MQTT_USERNAME=  # MQTT username (leave empty for anonymous access)
+MQTT_PASSWORD=  # MQTT password (leave empty for anonymous access)
+MQTT_CLIENT_ID=  # Custom MQTT client ID (optional, defaults to device_{device_id} or mqtt-collector-python)
+
 # InfluxDB Configuration
 INFLUXDB_URL=http://localhost:8086
 INFLUXDB_TOKEN=my-super-secret-auth-token
