--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -61,23 +61,28 @@
   # JSON string fields (for nested objects)
   json_string_fields = ["detection_label"]
   
+  # Note: json_int_fields is not supported by mqtt_consumer plugin
+  # Type conversion is handled by Starlark processor below
+  
   # Override measurement name to match Python collector
   name_override = "device_data"
 
 # Process flat JSON structure - convert types and move detection_label to tag
+# json_int_fields is not supported by mqtt_consumer, so we use Starlark for type conversion
 [[processors.starlark]]
   source = '''
 def apply(metric):
-    # Convert integer fields to int (always convert to fix schema collision)
-    # Telegraf JSON parser may infer them as float, but Python collector writes as int
+    # Convert integer fields to int (fixes schema collision with Python collector)
+    # Telegraf JSON parser infers large numbers as float, but Python collector writes as int
     int_fields = ["memory_total", "memory_used", "memory_available", 
                    "disk_total", "disk_used", "disk_free",
                    "network_bytes_sent", "network_bytes_recv"]
     for field in int_fields:
         if field in metric.fields:
             val = metric.fields[field]
-            # Always convert to int (Starlark doesn't support try/except)
-            metric.fields[field] = int(val)
+            # Always convert to int (int() works on both int and float in Starlark)
+            if val != None:
+                metric.fields[field] = int(val)
     
     # Convert detection_label from field to tag
     if "detection_label" in metric.fields:
