--- a/docker/mosquitto/config/mosquitto.conf
+++ b/docker/mosquitto/config/mosquitto.conf
@@ -1,9 +1,19 @@
+# MQTT Broker Configuration
+# Port 1883: Plain TCP (for development)
 listener 1883
 allow_anonymous true
 
+# Port 8883: TLS/SSL (for production)
+listener 8883
+allow_anonymous true
+certfile /mosquitto/config/certs/server.crt
+keyfile /mosquitto/config/certs/server.key
+cafile /mosquitto/config/certs/ca.crt
+
+# Persistence
 persistence true
 persistence_location /mosquitto/data/
 
+# Logging
 log_dest file /mosquitto/log/mosquitto.log
 log_type all
-
